force-app/main/default/objects/sfcma__InvoiceItem__c/sfcma__InvoiceItem__c.object-meta.xml
<CustomObject>
    <description>Contains information about a discrete billing and payment event for a specific time period. For example, a one-time charge or credit. Multiple invoice items can be associated with an invoice.</description>
    <label>Checkout Invoice Item</label>
    <nameField>
        <displayFormat>II-{000000}</displayFormat>
        <label>Checkout Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>