force-app/main/default/objects/sfcma__InvoiceItem__c/fields/sfcma__Description__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>