force-app/main/default/objects/sfcma__InvoiceItem__c/fields/sfcma__Invoice__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An existing invoice to add this invoice item to</description>
    <label>Invoice</label>
    <referenceTo>sfcma__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>