force-app/main/default/objects/sfcma__InvoiceItem__c/fields/sfcma__StartDate__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>