force-app/main/default/objects/sfcma__InvoiceItem__c/fields/sfcma__SubscriptionPlan__c.field-meta.xml
<CustomField>
    <fullName>sfcma__SubscriptionPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the invoice item is a proration.</description>
    <label>Subscription Plan</label>
    <referenceTo>sfcma__SubscriptionPlan__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>