force-app/main/default/objects/sfcma__InvoiceItem__c/fields/sfcma__Type__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Item</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>